--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "prusti-dev"]
-	path = prusti-dev
-	url = https://github.com/viperproject/prusti-dev
+[submodule "prusti"]
+	path = prusti
+	url = https://github.com/alegnani/prusti-dev.git
+	path = pancake-verifier-changes
