--- a/pancake2viper/Cargo.toml
+++ b/pancake2viper/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
+lazy_static = "1.5.0"
 pest = "2.7.11"
 pest_derive = "2.7.11"
 sexpr_parser = "0.3.0"
