--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,10 @@
-name: Builds the Pancake Language Server
+name: Build Rust Application
 
 on:
   push:
     branches: [ "**" ]
   pull_request:
     branches: [ "main" ]
-
 
 env:
   CARGO_TERM_COLOR: always
@@ -14,46 +13,51 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
+      LD_LIBRARY_PATH: /usr/lib/jvm/java-11-openjdk-amd64/lib/server
+      VIPER_INSTALL: ${{ github.workspace }}/ViperTools
+
     steps:
-    - name: Install default tools
-      run: sudo apt-get update && sudo apt-get install -y curl build-essential libssl-dev pkg-config unzip
-    - name: Install JDK11
-      run: sudo apt-get install -y openjdk-11-jdk
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
 
-    - name: Set up cargo cache
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.cargo/bin/
-          ~/.cargo/registry/index/
-          ~/.cargo/registry/cache/
-          ~/.cargo/git/db/
-          target/
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            curl \
+            build-essential \
+            libssl-dev \
+            pkg-config \
+            unzip \
+            openjdk-11-jdk
 
-    - name: Export ENVS
-      run: |
-        export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
-        export LD_LIBRARY_PATH=$JAVA_HOME/lib/server:$LD_LIBRARY_PATH
+      - name: Set up cargo cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-    - uses: actions/checkout@v4
-      with:
-        submodules: true
-    - name: Download ViperTools
-      run: |
-        VERSION=$(cat viper-toolchain)
-        OS="Linux"
-        BASE_URL="https://github.com/viperproject/viper-ide/releases/download"
-        ZIP_FILE="ViperTools${OS}.zip"
-        ZIP_URL="${BASE_URL}/${VERSION}/${ZIP_FILE}"
-        curl -LO $ZIP_URL
-        UNZIP_DIR="viper"
-        unzip -o $ZIP_FILE -d $UNZIP_DIR
-        export VIPER_INSTALL=$(pwd)/$UNZIP_DIR
-        echo "VIPER_INSTALL is set to ${VIPER_INSTALL}"
-        export VIPER_HOME=$VIPER_INSTALL/backends
-        export Z3_EXE=$VIPER_INSTALL/z3/bin/z3
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      - name: Download and extract ViperTools
+        run: |
+          curl -L -o ViperToolsLinux.zip https://github.com/viperproject/viper-ide/releases/download/v4.3.1/ViperToolsLinux.zip
+          unzip -o ViperToolsLinux.zip -d ViperTools
+          rm ViperToolsLinux.zip
+
+      - name: Set VIPER_HOME and Z3_EXE environment variables
+        run: |
+          echo "VIPER_HOME=${VIPER_INSTALL}/backends" >> $GITHUB_ENV
+          echo "Z3_EXE=${VIPER_INSTALL}/z3/bin/z3" >> $GITHUB_ENV
+
+      - name: Build 
+        run: cargo build --release --verbose
+      - name: Run tests
+        run: cargo test --verbose
