--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,4 +60,16 @@ jobs:
       - name: Build 
         run: cargo build --release --verbose
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test --package pancake2viper --release --verbose
+
+      - name: Save pancake2viper
+        uses: actions/upload-artifact@v4
+        with:
+          name: pancake2viper
+          path: target/release/pancake2viper
+
+      - name: Save language server
+        uses: actions/upload-artifact@v4
+        with:
+          name: pancake-language-server
+          path: target/release/pancake-language-server
