--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,9 +58,9 @@ jobs:
           echo "Z3_EXE=${VIPER_INSTALL}/z3/bin/z3" >> $GITHUB_ENV
 
       - name: Build 
-        run: cargo build --verbose
+        run: cargo build --release --verbose
       - name: Run tests
-        run: cargo test --package pancake2viper --verbose
+        run: cargo test --package pancake2viper --release --verbose
 
       - name: Save pancake2viper
         uses: actions/upload-artifact@v4
