--- a/pancake2viper/Cargo.toml
+++ b/pancake2viper/Cargo.toml
@@ -9,6 +9,7 @@ anyhow = "1.0.86"
 lazy_static = "1.5.0"
 pest = "2.7.11"
 pest_derive = "2.7.11"
+regex = "1.10.6"
 sexpr_parser = "0.3.0"
 strum = { version = "0.26.3", features = ["derive"] }
 tracing = "0.1.40"
