--- a/pancake2viper/Cargo.toml
+++ b/pancake2viper/Cargo.toml
@@ -6,6 +6,7 @@ build = "build.rs"
 
 [dependencies]
 anyhow = "1.0.86"
+clap = { version = "4.5.18", features = ["derive"] }
 lazy_static = "1.5.0"
 pest = "2.7.11"
 pest_derive = "2.7.11"
