--- a/pancake-language-server/Cargo.toml
+++ b/pancake-language-server/Cargo.toml
@@ -12,5 +12,6 @@ tower-lsp = "0.20.0"
 pancake2viper = { path = "../pancake2viper" }
 anyhow = "1.0.86"
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
-tracing-appender = "0.2.3"
+serde_json = "1.0.128"
+
+expanduser = "1.2.2"
